--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h3 {
     flex: auto;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .selections img {
     box-sizing: border-box;
