--- a/style.css
+++ b/style.css
@@ -12,10 +12,7 @@ body {
 }
 h1 {
     margin-top: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+    text-align: center;
     font-size: 48px;
 }
 .container {
