Resize the height of the hover effect

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ h3 {
 .player .selections img:hover {
     background-color:rgb(255, 209, 2);
     width: 95px;
-    height: 105;
+    height: 100px;
 }
 
 footer {
